monticore-generator/src/test/resources/cocos/invalid/A0277/A0277c.mc4
/* (c) https://github.com/MontiCore/monticore */
package cocos.invalid.A0277;

grammar A0277c extends cocos.invalid.A0277.A0277a{

    abstract C extends A;

    X = A;

}
